LIN-1090/LIN-3247 :: Clean up BindingDescriptor classes
Change-Id: I1ac867c6eb851c3af2bc8b484152a28757cc4e7a